[package]
name = "boson"
version = "0.1.0"
authors = ["JagratPatkar <jagratpatkar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
anyhow = "1.0"
utf8-chars = "1.0.0"
thiserror = "1.0.24"
llvm-sys = "110.0.1"
tempfile = "3.2.0"